--- a/src/SearchEngine.css
+++ b/src/SearchEngine.css
@@ -8,7 +8,8 @@
   margin-right:10px ;
   padding: 10px 20px;
   border: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: black;
 
 }
 
@@ -18,5 +19,15 @@
   border: 2px solid bisque;
   border-radius: 24px;
   padding:4px 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(93, 63, 26);
+    font-weight: 800;
+}
+
+@media (max-width:900px) {
+  .submit{
+    color:rgb(93, 63, 26);
+    font-weight: 800;
+  }
+  
 }
